; ModuleID = '/home/carl/AnghaBench/lab/engine/code/renderergl1/extr_tr_backend.c_SetViewportAndScissor.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/renderergl1/extr_tr_backend.c_SetViewportAndScissor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i32, i32, i32, i32 }

@GL_PROJECTION = common dso_local global i32 0, align 4
@backEnd = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@GL_MODELVIEW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @SetViewportAndScissor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @SetViewportAndScissor() #0 {
  %1 = load i32, i32* @GL_PROJECTION, align 4
  %2 = call i32 @qglMatrixMode(i32 %1)
  %3 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @backEnd, i32 0, i32 0, i32 4), align 4
  %4 = call i32 @qglLoadMatrixf(i32 %3)
  %5 = load i32, i32* @GL_MODELVIEW, align 4
  %6 = call i32 @qglMatrixMode(i32 %5)
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @backEnd, i32 0, i32 0, i32 3), align 4
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @backEnd, i32 0, i32 0, i32 2), align 4
  %9 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @backEnd, i32 0, i32 0, i32 1), align 4
  %10 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @backEnd, i32 0, i32 0, i32 0), align 4
  %11 = call i32 @qglViewport(i32 %7, i32 %8, i32 %9, i32 %10)
  %12 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @backEnd, i32 0, i32 0, i32 3), align 4
  %13 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @backEnd, i32 0, i32 0, i32 2), align 4
  %14 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @backEnd, i32 0, i32 0, i32 1), align 4
  %15 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @backEnd, i32 0, i32 0, i32 0), align 4
  %16 = call i32 @qglScissor(i32 %12, i32 %13, i32 %14, i32 %15)
  ret void
}

declare dso_local i32 @qglMatrixMode(i32) #1

declare dso_local i32 @qglLoadMatrixf(i32) #1

declare dso_local i32 @qglViewport(i32, i32, i32, i32) #1

declare dso_local i32 @qglScissor(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
